@@ -121,6 +121,12 @@ $("<b>#your_table_id</b>").treeTable();
         </thead>
         <tbody>
           <tr>
+            <td><tt>branchAttr</tt></td>
+            <td><tt>string</tt></td>
+            <td><tt>&quot;ttBranch&quot;</tt></td>
+            <td>Optional data attribute that can be used to force the expander icon to be rendered on a node. This allows us to define a node as a branch node even though it does not have children yet. This translates to a <tt>data-tt-branch</tt> attribute in your HTML.</td>
+          </tr>
+          <tr>
             <td><tt>clickableNodeNames</tt></td>
             <td><tt>bool</tt></td>
             <td><tt>false</tt></td>
