@@ -1,5 +1,6 @@
 == 3.0.0-rc.2 - NOT RELEASED YET
 
+* [FEATURE] Added (optional) tt-branch data attribute for AJAX use case
 * [FEATURE] Added onInitialized event
 * [FEATURE] Added onNodeInitialized event (#21)
 * [BUG] Having an empty data-tt-parent-id attribute would result in an error
